2012-11-09 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* dprsgw.c:
	    Better accounting on DPRS side-channel data occupancy,
	    assuming the DPRS gw does send bytes all the time.

2012-11-09 FUJIURA Toyonori JG2RZF <toyokun@gmail.com>

	* dprsgw.c:
	    Add receiver Erlang estimators to received packets.

2012-11-01  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprsis.c:
	    Move CRLF appending later into APRSIS transmission.

2012-10-31  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c:
	    Use thread-safe gmtime_r() instead of gmtime() for time printout.

2012-10-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* Makefile.in:
	    Improve distribution tar RPM building support.

	* rpm/aprx.init, rpm/aprx.service, rpm/aprx.spec.in:
	    RPM package packing files

	* filter.c:
	    Clean filter parser.

	* aprx.c:
	    Acquire a lock on pid-file, and keep the file open.

2012-10-29 FUJIURA Toyonori JG2RZF <toyokun@gmail.com>
		
	* dprsgw.c:
	    D-STAR callsign formatting for suffixless ones:
	      * "JG2RZF A" -> "JG2RZF-A"
	      * "JG2RZF  " -> "JG2RZF-"  Oops!

2012-10-12  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* rpm/aprx.spec.in, rpm/aprx.service:
	    Andrew Elwell <Andrew.Elwell@gmail.com>  supplied better
	    version of Fedora, and rhel.

	* filter.c:
	    Leave the "over-long parameters are rejected" logic, but don't
	    support alternate group field splitter input.

2012-10-03  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* TODO, INSTALL, aprx.c, aprx-manual.odt, aprx-manual.pdf,
	  VERSION: 2.06

2012-10-02  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* filter.c:
	    Parse filters with callsign sets without overflowing buffer.
	    Officially syntax is:   OP/callsign1/callsign2   but support
	    also:  OP/callsign1,callsign2

	* digipeater.c:
	    Correct analysis of first "via" field, bail out of the loop
	    only after it has been parsed.
