@@ -114,7 +114,7 @@ static void telemetry_datatx(void)
 	for (i = 0; i < ErlangLinesCount; ++i) {
 		struct erlangline *E = ErlangLines[i];
 		struct aprx_interface *sourceaif = find_interface_by_callsign(E->name);
-		if (!interface_is_telemetrable(sourceaif))
+		if (!sourceaif || !interface_is_telemetrable(sourceaif))
 		  continue;
 
 		beaconaddrlen = sprintf(beaconaddr, "%s>%s,TCPIP*", E->name, tocall);
@@ -319,9 +319,8 @@ static void telemetry_labeltx()
 	for (i = 0; i < ErlangLinesCount; ++i) {
 		struct erlangline *E = ErlangLines[i];
 		struct aprx_interface *sourceaif = find_interface_by_callsign(E->name);
-		if (!interface_is_telemetrable(sourceaif))
+		if (!sourceaif || !interface_is_telemetrable(sourceaif))
 		  continue;
-
 		beaconaddrlen = sprintf(beaconaddr, "%s>%s,TCPIP*", E->name, tocall);
 		// First two bytes of BUF are for AX.25 control+PID fields
 
